armageddon-lab3/12_sao_cloudfront_shield_waf.tf

# resource "aws_wafv2_web_acl" "sao_armageddon_cf_waf" {
#     provider = aws.use1
#   name  = "${var.project_name}-sao-cf-waf"
#   scope = "CLOUDFRONT"

#   default_action {
#     allow {}
#   }

#   visibility_config {
#     cloudwatch_metrics_enabled = true
#     metric_name                = "${var.project_name}-sao-cf-waf"
#     sampled_requests_enabled   = true
#   }

#   rule {
#     name     = "AWSManagedRulesCommonRuleSet"
#     priority = 1
#     override_action {
#       none {}
#     }

#     statement {
#       managed_rule_group_statement {
#         name        = "AWSManagedRulesCommonRuleSet"
#         vendor_name = "AWS"
#       }
#     }

#     visibility_config {
#       cloudwatch_metrics_enabled = true
#       metric_name                = "${var.project_name}-sao-cf-waf-common"
#       sampled_requests_enabled   = true
#     }
#   }
# }
